Bug 65683 - [FORMATTING] Outline numbering settings saved under own name, are not saved to use in other documents (after restart)
Summary: [FORMATTING] Outline numbering settings saved under own name, are not saved t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-12 16:17 UTC by charles.hall
Modified: 2014-11-05 21:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description charles.hall 2013-06-12 16:17:42 UTC
The Outline Numbering dialog provides the option to save the currently defined attributes for levels 1 thru 10. Clicking the Format button then Save As allows a custom name to be set.

It seems as though using this option does not persist the saved settings beyond the current session.

For example, I edit my template and save the outline numbering attributes as "my_numbering". I keep that document open but create a new blank document. If I go to Outline Numbering then I can click on the Format button and pick "my_numbering" to apply those attributes to this document. The problem arises if I quit LibreOffice. If I then open it again and create a new document based on my template, then the Format button only offers default options "Untitled1" through to "Untitled9". My previously saved set of attributes has disappeared.

Similar behaviour reported in the forum: http://ask.libreoffice.org/en/question/12052/having-some-troubles-for-saving-outline-numbering/?answer=18916#post-id-18916
Comment 1 Cor Nouws 2013-06-12 17:58:39 UTC
@charles,
thanks for reporting. I can confirm this. 
The Helpt text says that a format that is saved, can be used in other documents.
But it can't after restaring LibreOffice 4.0.3.

Do you know if it worked before?
Regards - Cor
Comment 2 Owen Genat (retired) 2014-07-20 13:15:58 UTC
Under GNU/Linux using v4.2.5.2 Build ID: 61cb170a04bb1f12e77c884eab9192be736ec5f5 the problem remains but for v4.3.0.3 Build ID: 08ebe52789a201dd7d38ef653ef7a48925e7f9f7 it appears to be fixed i.e., saved format entries are available in subsequent sessions.
Comment 3 Cor Nouws 2014-11-04 21:58:31 UTC
@caolan: is this fixed with commit
 http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ce9c4f910afb2bf1ac0aec97ef49598493ac3a5
bug 69049 (as mentioned there) is not related ..
thanks
Comment 4 Caolán McNamara 2014-11-05 14:59:13 UTC
Yeah, I was fixing https://issues.apache.org/ooo/show_bug.cgi?id=69049 which is the same problem as this apparently.
Comment 5 Cor Nouws 2014-11-05 21:31:47 UTC
(In reply to Caolán McNamara from comment #4)
> Yeah, I was fixing https://issues.apache.org/ooo/show_bug.cgi?id=69049 which
> is the same problem as this apparently.

Thanks!