Resolves: fdo#65683 Format in 'Outline Numbering' not saved anymore

also #i69049# Format in 'Outline Numbering' not saved anymore

(cherry picked from commit 0ce9c4f910afb2bf1ac0aec97ef49598493ac3a5)

Conflicts:
	sw/source/uibase/config/uinums.cxx

Change-Id: Ibd129d989a32eec2f63413d1ed09962ad3b38c68